--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -1,15 +1,16 @@
-.submit {
+button {
   width: 170px;
-  height: 70px;
-  background-color: var(--blue);
-  border-radius: 12px;
+  height: 40px;
+  border-radius: 20px;
   color: var(--white);
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
-  font-weight: 600;
-  letter-spacing: 0.3rem;
-  line-height: 1.3rem;
+  font-weight: 400;
   cursor: pointer;
+}
+
+.submit {
+  background-color: var(--blue);
 }
 
 .submit:hover {
@@ -17,17 +18,7 @@
 }
 
 .cancel {
-  width: 180px;
-  height: 70px;
   background-color: var(--red);
-  border-radius: 12px;
-  color: var(--white);
-  font-family: "Poppins", sans-serif;
-  font-size: 1rem;
-  font-weight: 600;
-  letter-spacing: 0.3rem;
-  line-height: 1.3rem;
-  cursor: pointer;
 }
 
 .cancel:hover {
