--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ img {
   --darkred: #c0002d;
   --blue: #00b2ff;
   --darkblue: #0079db;
-  --yellow: #fffb25;
+  --mustard: #e6d600;
   --gold: #e0d100;
   --white: #ffffff;
   --gray: #474747;
