--- a/src/styles/TaskList.module.css
+++ b/src/styles/TaskList.module.css
@@ -1,7 +1,7 @@
 .list {
   max-width: 430px;
   min-width: 390px;
-  height: 500px;
+  height: 70%;
 
   display: flex;
   flex-direction: column;
@@ -11,4 +11,16 @@
   background-color: var(--black);
 
   gap: 1rem;
+
+  /* implementação de rolagem */
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+@media (min-width: 768px) {
+  .list {
+    max-width: 1024px;
+    min-width: 700px;
+    height: 70%;
+  }
 }
