--- a/src/styles/TaskItem.module.css
+++ b/src/styles/TaskItem.module.css
@@ -43,6 +43,27 @@
   gap: 1rem;
 }
 
+.dueDateBox {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-direction: center;
+  gap: 8px;
+}
+
+.alarmIcon {
+  width: 16px;
+  height: 16px;
+  background-color: #ffffff;
+  -webkit-mask: url("../icons/alarm.svg") no-repeat center;
+  mask: url("../icons/alarm.svg") no-repeat center;
+  mask-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  margin-bottom: 2px;
+}
+
 @media (min-width: 768px) {
   .item {
     flex-direction: row;
